Fix sidebar overlap on tablet

--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -176,10 +176,6 @@ main .btn-primary:active {
     visibility: hidden;
 }
 
-.main {
-    padding: 0px 25px;
-}
-
 @media (max-width: 62.5em) {
     .heading::after {
         width: 200px;
